# RustAuth

./: .gitignore  Cargo.toml
src/: main.rs
src/controllers/: auth_controllers.rs
src/database/: mongo.rs
src/middlewares/: auth_middleware.rs
src/models/: auth_schema.rs  mod.rs  route_schema.rs
src/routes/: auth_routes.rs  mod.rs
src/utils/: mod.rs  multer.rs
