[package]
name = "RustBackend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"  
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.1.0"
bcrypt = "0.15.1"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]